--- a/css/stylesTwo.css
+++ b/css/stylesTwo.css
@@ -5,13 +5,13 @@
 }
 
 body {
-    background-color: rgb(248, 219, 246);
+    background-color: #110038;
     letter-spacing: 0;
 }
 
 header {
-    background: rgb(65, 128, 246);
-    background: linear-gradient(90deg, rgba(65, 128, 246, 1) 20%, rgba(247, 201, 243, 1) 100%);
+    background: rgb(46,50,251);
+    background: linear-gradient(90deg, rgba(46,50,251,1) 1%, rgba(238,62,254,1) 100%);
     color: #ffffff;
     font-size: 7px;
     font-family: 'ChakraPetch-Regular';
@@ -27,16 +27,25 @@ a {
     font-family: 'ChakraPetch-Regular';
 }
 
+#miLogo {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url("../gifOS_UI 3/assets/gifOF_logo_dark.png") no-repeat;
+    width: 180px;
+    height: 52px;
+    padding-left: 180px;
+}
+
 .boton {
     padding: 8px 16px;
-    background-color: #F7C9F3;
+    background-color: #EE3EFE;
     color: #000000;
     border-style: solid;
     border-width: 1px;
     border-color: #110038;
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
     font-family: 'ChakraPetch-Regular';
-    cursor: pointer;
 }
 
 #navegacion button:hover {
@@ -100,10 +109,10 @@ a {
     border: none;
     font-family: 'ChakraPetch-Regular';
     font-size: 16px;
-    color: #110038;
+    color: #ffffff;
     letter-spacing: 0;
     line-height: 18px;
-    background: rgb(248, 219, 246);
+    background: #110038;
     box-shadow: none;
     padding: 5px;
 }
@@ -134,17 +143,15 @@ main {
     border-style: outset;
 }
 
-.buscar {
-    background: rgb(65, 128, 246);
-    background: linear-gradient(90deg, rgba(65, 128, 246, 1) 20%, rgba(247, 201, 243, 1) 100%);
+#buscar {
+    background: rgb(46,50,251);
+    background: linear-gradient(90deg, rgba(46,50,251,1) 1%, rgba(238,62,254,1) 100%);
     margin: 0px;
-    font-family: 'Chakra Petch';
+    font-family: 'ChakraPetch-Bold';
     font-size: 14px;
     color: #FFFFFF;
     letter-spacing: 0;
     padding: 2px;
-    display: flex;
-    justify-content: space-between;
 }
 
 #queBuscar {
@@ -211,215 +218,67 @@ main {
     border-color: #808080;
     text-align: left;
 }
-
 .dropdownTwo div button:hover {
     background-color: #B4B4B4;
     color: #110038;
     border-style: dotted;
     border-width: 2px;
 }
-
-.margenes {
+.predefinido{
     margin: 3vw 10vw;
 }
-
 .sugerir,
-.resultados {
+.resultados{
     background: #FFFAFE;
     border: 1px solid #E6BBE2;
     box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
     padding: 5px;
-    font-family: ChakraPetch-Regular;
+    font-family: 'ChakraPetch-Regular';
     font-size: 14px;
     color: #110038;
     letter-spacing: 0;
 }
-
-#gifs {
+#gifs{
     display: flex;
     flex-wrap: wrap;
 }
 
-.tendencias {
+.tendencias{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     padding-top: 10px;
 }
-
-.tendencias figure {
+.tendencias figure{
     margin: 1vw;
 }
-
-.tendencias figure img {
+.tendencias figure img{
     width: 230px;
     height: 250px;
 }
-
-.tendencias figure {
-    width: 230px;
-    height: 250px;
-}
-
-.searchTitle {
-    background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
-    height: 28px;
-    font-weight: 700;
-    font-size: 14px;
-    color: #FFFFFF;
-    letter-spacing: 0;
-    transform: translate(0px, -29px);
-    width: 100%;
-    overflow: hidden;
+.searchTitle{
     display: none;
 }
-
-.tendencias figure:hover {
-    border: 1px dotted #110038;
-}
-
-.tendencias figure:hover figcaption {
-    display: block;
-    width: 100%;
-}
-
-
-
-#gifs {
+#gifs{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     padding-top: 10px;
 }
-
-#gifs figure {
+#gifs figure{
     margin: 1vw;
 }
-
-#gifs figure img {
+#gifs figure img{
     width: 230px;
     height: 250px;
 }
-
-#flecha {
+#flecha{
     transform: translateY(-7px);
 }
-
-.contenedor {
+#busquedaCrear{
     background-color: #E6E6E6;
-    margin: 0 22vw;
+    margin: 0 27vw;
     padding: 0 0 2px 0;
     align-items: center;
     border-style: outset;
-}
-
-
-.sugerencias {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding-top: 10px;
-}
-
-.gifos {
-    width: 230px;
-    height: 250px;
-}
-
-#gifUno,
-#gifDos,
-#gifTres,
-#gifCuatro {
-    width: 230px;
-    height: 250px;
-}
-
-.estadoGif:hover {
-    border: 1px dotted #110038;
-}
-
-.sugerencias_titulo {
-    background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
-    height: 24px;
-    font-weight: 700;
-    font-size: 14px;
-    color: #FFFFFF;
-    letter-spacing: 0;
-    padding-left: 5px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.cruz:hover {
-    cursor: pointer;
-}
-
-.verMas {
-    background: #4180F6;
-    border: 1px solid #4C2F99;
-    box-shadow: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
-    color: #ffffff;
-    position: relative;
-    left: 10px;
-    top: -50px;
-    width: 81px;
-    height: 34px;
-    z-index: 100;
-}
-
-.verMas:hover {
-    border: 1px dotted #110038;
-    cursor: pointer;
-}
-
-.buscarCaja {
-    display: flex;
-    margin: 2rem;
-}
-
-#pasosCreacion {
-    margin-left: 2rem;
-    font-family: 'Chakra Petch', sans-serif;
-    font-size: 16px;
-}
-
-#texto {
-    margin-top: 2rem;
-    font-family: 'Chakra Petch';
-    font-size: 14px;
-    color: #110038;
-    letter-spacing: 0;
-    line-height: 20px;
-}
-
-#pasosSeguir {
-    line-height: 35px;
-    margin: 1rem 0;
-}
-
-.contenedorBotones {
-    display: flex;
-    justify-content: flex-end;
-    height: 36px;
-}
-
-.botonCreacion {
-    padding: 8px 16px;
-    background-color: #F7C9F3;
-    color: #000000;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #110038;
-    box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-    font-family: 'Chakra Petch';
-    font-size: 14px;
-    cursor: pointer;
-    width: 144px;
-}
-
-#botonCancelar {
-    margin-right: 1.5rem;
-    background: #FFF4FD;
-    border: 1px solid #110038;
-    box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
